--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,13 +41,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Build and Push Docker Image
-        run: |
-          docker build --target production -t nest-app .
-          echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-          docker tag nest-app ghcr.io/${{ github.repository_owner }}/nest-app:latest
-          docker push ghcr.io/${{ github.repository_owner }}/nest-app:latest
-
       - name: Deploy to VPS
         uses: appleboy/ssh-action@master
         with:
@@ -55,7 +48,14 @@ jobs:
           username: ${{ secrets.IP_USERNAME }}
           password: ${{ secrets.IP_PASS }}
           script: |
-            docker pull ghcr.io/${{ github.repository_owner }}/nest-app:latest
+            # Pull the latest code from GitHub
+            cd /home/workspace/ci-cd-fullstack-example/nest-app
+            git pull origin master
+            
+            # Build the Docker image
+            docker build -t nest-app:latest .
+
+            # Run Docker container
             docker stop backend || true
             docker rm backend || true
-            docker run -itd -p 8000:8000 --env-file .env --env-file .env.development  --name backend --network ci-cd-fullstack-example_nest_network ghcr.io/${{ github.repository_owner }}/nest-app:latest
+            docker run -itd -p 8000:8000 --env-file .env --env-file .env.development  --name backend --network ci-cd-fullstack-example_nest_network nest-app:latest
